2022-10-17T16:16:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266807113 # 538
* notice: last 14d: unq all: 38 5653
* notice: prev accum: outdated-unq outdated-all / unq all: 1111 73052 / 1176 78732
* notice: next accum: outdated-unq outdated-all / unq all: 1111 73052 / 1176 78705
* notice: prev exec diff / last date diff / accum: unq all: +0 +116 -0 -143 / +2 +253 -0 -0 / 2 253
* notice: removed / changed dates: [] / [2022-10-03 2022-10-17]

2022-10-17T08:20:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3263499604 # 537
* notice: last 14d: unq all: 38 5680
* notice: prev accum: outdated-unq outdated-all / unq all: 1111 73052 / 1174 78771
* notice: next accum: outdated-unq outdated-all / unq all: 1111 73052 / 1176 78732
* notice: prev exec diff / last date diff / accum: unq all: +2 +137 -0 -176 / +2 +137 -0 -0 / 2 137
* notice: removed / changed dates: [] / [2022-10-03 2022-10-17]

2022-10-17T00:47:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3261563112 # 536
* notice: last 14d: unq all: 38 5719
* notice: prev accum: outdated-unq outdated-all / unq all: 1108 72643 / 1172 78299
* notice: next accum: outdated-unq outdated-all / unq all: 1111 73052 / 1174 78771
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -19 / +2 +407 -0 -0 / 2 407
* notice: removed / changed dates: [2022-10-02] / [2022-10-03 2022-10-16]

2022-10-16T16:08:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3260088385 # 535
* notice: last 14d: unq all: 38 5656
* notice: prev accum: outdated-unq outdated-all / unq all: 1108 72643 / 1171 78323
* notice: next accum: outdated-unq outdated-all / unq all: 1108 72643 / 1172 78299
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -0 -146 / +2 +259 -0 -0 / 2 259