@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-17T16:16:59Z",
-  "count" : 253,
-  "count_minmax" : [ 137, 253 ],
-  "count_decinc" : [ -0, +253 ],
+  "timestamp" : "2022-10-18T00:43:00Z",
+  "count" : 399,
+  "count_minmax" : [ 137, 399 ],
+  "count_decinc" : [ -0, +399 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
