@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-17T16:16:59Z",
-  "count_outdated" : 73052,
-  "uniques_outdated" : 1111,
-  "count" : 78705,
+  "timestamp" : "2022-10-18T00:43:00Z",
+  "count_outdated" : 73454,
+  "uniques_outdated" : 1112,
+  "count" : 79177,
   "uniques" : 1176,
   "clones" : [
     {
-      "timestamp": "2022-10-03T00:00:00Z",
-      "count": 64,
-      "count_minmax": [ 64, 402 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-10-04T00:00:00Z",
-      "count": 402,
+      "count": 390,
       "count_minmax": [ 137, 402 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-17T00:00:00Z",
-      "count": 253,
-      "count_minmax": [ 137, 253 ],
+      "count": 399,
+      "count_minmax": [ 137, 399 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
