@@ -1,3 +1,11 @@
+2022-10-18T00:43:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3269737644 # 539
+* notice: last 14d: unq all: 38 5723
+* notice: prev accum: outdated-unq outdated-all / unq all: 1111 73052 / 1176 78705
+* notice: next accum: outdated-unq outdated-all / unq all: 1112 73454 / 1176 79177
+* notice: prev exec diff / last date diff / accum: unq all: +0 +146 -0 -12 / +2 +399 -0 -0 / 2 399
+* notice: removed / changed dates: [2022-10-03] / [2022-10-04 2022-10-17]
+
 2022-10-17T16:16:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266807113 # 538
 * notice: last 14d: unq all: 38 5653
